--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tgalopin/html-sanitizer",
+    "name": "dorianrod/html-sanitizer",
     "description": "Sanitize untrustworthy HTML user input",
     "type": "library",
     "license": "MIT",
