--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Sanitize untrustworthy HTML user input",
     "type": "library",
     "license": "MIT",
+    "version": "1.0.0",
     "authors": [
         {
             "name": "Titouan Galopin",
